--- a/src/views/ChatView/ChatView.styl
+++ b/src/views/ChatView/ChatView.styl
@@ -20,15 +20,16 @@ channel-utils-height=8.4rem;
 channel-width=12rem;
 
 .ChatView {
-    position: fixed;
-    top: navbar-height+0.2rem;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    flex-grow: 1;
+    //position: fixed;
+    //top: navbar-height+0.2rem;
+    //bottom: 0;
+    //left: 0;
+    //right: 0;
 
     display: flex;
-    width: 100vw;
-    max-width: 100vw;
+    //width: 100vw;
+    //max-width: 100vw;
     flex-direction: row;
 
 
