--- a/src/views/Puzzle/Puzzle.styl
+++ b/src/views/Puzzle/Puzzle.styl
@@ -20,14 +20,20 @@
 puzzle-controls-width=400px
 
 .Puzzle {
+    max-height: "calc(100vh - %s - 0.2rem)" % navbar-height;
+}
+
+#nav-left-flat, #nav-left-expanding {
+    .Puzzle {
+        max-height: 100vh;
+    }
+}
+
+
+.Puzzle {
     display: flex;
     flex-direction: row;
     align-items: stretch;
-    position: absolute;
-    top: below-navbar;
-    bottom: 0;
-    left: 0;
-    right: 0;
 
 
     &.portrait {
